--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <meta http-equiv="refresh" content="0; url=https://repo.github.io/src/index.html">
+  <meta http-equiv="refresh" content="0; url=https://github.com/aya-baur/website1-preview/src/index.html">
 </head>
 
 <body></body>
